Fix #24: Gene view row group headers hard to see

--- a/gotrack/src/main/webapp/resources/css/common.css
+++ b/gotrack/src/main/webapp/resources/css/common.css
@@ -282,3 +282,8 @@ div.inline {
     display: inline-block;
     vertical-align: text-bottom;
 }
+
+.ui-rowgroup-header.ui-datatable-headerrow.ui-widget-header > td {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
